@@ -28,6 +28,11 @@
 </msg>
 
 <msg>
+	<!-- Link to the titlepage of a <article> -->
+	<msgid>About This Article</msgid>
+	<_msgstr>About This Article</_msgstr>
+</msg>
+<msg>
 	<!-- Link to the titlepage of a <bibliography> -->
 	<msgid>About This Bibliography</msgid>
 	<_msgstr>About This Bibliography</_msgstr>
