@@ -1,3 +1,10 @@
+2004-01-21  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/gettext.xsl:
+	* stylesheets/l10n.xml.in:
+	- Added string 'About This Article'.
+	- Made gettext behave more nicely when a string isn't found.
+
 2004-01-19  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/db2html-division.xsl:
